--- a/pitch.html
+++ b/pitch.html
@@ -871,7 +871,7 @@
         <div class="showcase-section">
             <h3 class="section-title">Training Features</h3>
             <div class="img-container">
-                <img src="images/images3.jpg" alt="Training Features" />
+                <img src="images/image5.jpg" alt="Training Features" />
             </div>
             <div class="feature-list">
                 <div class="feature-item">Trainingsübersicht & Fortschrittsverfolgung</div>
@@ -885,7 +885,7 @@
         <div class="showcase-section">
             <h3 class="section-title">Analyse Features</h3>
             <div class="img-container">
-                <img src="images/images8.jpg" alt="Analysis Features" />
+                <img src="images/images3.jpg" alt="Analysis Features" />
             </div>
             <div class="feature-list">
                 <div class="feature-item">Detaillierte Fortschrittsanalyse</div>
@@ -899,7 +899,7 @@
         <div class="showcase-section">
             <h3 class="section-title">Ernährung Features</h3>
             <div class="img-container">
-                <img src="images/images9.jpg" alt="Nutrition Features" />
+                <img src="images/image9.jpg" alt="Nutrition Features" />
             </div>
             <div class="feature-list">
                 <div class="feature-item">Individualisierte Ernährungspläne</div>
@@ -927,7 +927,7 @@
             <h3 style="color: #ff6600; margin-bottom: 10px; text-align: center; font-size: 1.2rem;">Interaktives Dashboard</h3>
 
             <div style="position: relative; height: 340px; overflow: hidden; border-radius: 8px; border: 1px solid #333;">
-                <img src="images/images4.jpg" alt="Coach Dashboard" style="width: 100%; height: 100%; object-fit: cover;" />
+                <img src="images/image4.jpg" alt="Coach Dashboard" style="width: 100%; height: 100%; object-fit: cover;" />
             </div>
 
             <div style="margin-top: 15px;">
@@ -942,7 +942,7 @@
             <h3 style="color: #ff6600; margin-bottom: 10px; text-align: center; font-size: 1.2rem;">Detaillierte Klientenanalyse</h3>
 
             <div style="position: relative; height: 340px; overflow: hidden; border-radius: 8px; border: 1px solid #333;">
-                <img src="images/images6.jpg" alt="Client Details" style="width: 100%; height: 100%; object-fit: cover;" />
+                <img src="images/image6.jpg" alt="Client Details" style="width: 100%; height: 100%; object-fit: cover;" />
             </div>
 
             <div style="margin-top: 15px;">
