--- a/pitch.html
+++ b/pitch.html
@@ -885,7 +885,7 @@
         <div class="showcase-section">
             <h3 class="section-title">Analyse Features</h3>
             <div class="img-container">
-                <img src="images/images3.jpg" alt="Analysis Features" />
+                <img src="images/image3.jpg" alt="Analysis Features" />
             </div>
             <div class="feature-list">
                 <div class="feature-item">Detaillierte Fortschrittsanalyse</div>
