--- a/pitch.html
+++ b/pitch.html
@@ -709,7 +709,7 @@
         margin: 0 auto;
         overflow: hidden;
         border-radius: 10px;
-        border: 1px solid #333;
+        border: none;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
         margin-bottom: 20px;
     }
@@ -747,7 +747,7 @@
         margin: 0 auto;
         overflow: hidden;
         border-radius: 10px;
-        border: 1px solid #333;
+        border: none;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     }
 
@@ -926,7 +926,7 @@
         <div style="background-color: #111; border-radius: 10px; padding: 15px; display: flex; flex-direction: column;">
             <h3 style="color: #ff6600; margin-bottom: 10px; text-align: center; font-size: 1.2rem;">Interaktives Dashboard</h3>
 
-            <div style="position: relative; height: 340px; overflow: hidden; border-radius: 8px; border: 1px solid #333;">
+            <div style="position: relative; height: 340px; overflow: hidden; border-radius: 8px; border: none #333;">
                 <img src="images/image4.jpg" alt="Coach Dashboard" style="width: 100%; height: 100%; object-fit: cover;" />
             </div>
 
@@ -941,7 +941,7 @@
         <div style="background-color: #111; border-radius: 10px; padding: 15px; display: flex; flex-direction: column;">
             <h3 style="color: #ff6600; margin-bottom: 10px; text-align: center; font-size: 1.2rem;">Detaillierte Klientenanalyse</h3>
 
-            <div style="position: relative; height: 340px; overflow: hidden; border-radius: 8px; border: 1px solid #333;">
+            <div style="position: relative; height: 340px; overflow: hidden; border-radius: 8px; border: none #333;">
                 <img src="images/image6.jpg" alt="Client Details" style="width: 100%; height: 100%; object-fit: cover;" />
             </div>
 
