--- a/pitch.html
+++ b/pitch.html
@@ -1641,7 +1641,7 @@
                 </div>
 
                 <div style="margin-top: 40px;">
-                    <p style="font-size: 1.1rem; color: #ddd; margin-bottom: 20px;">Mehr als nur Kapital suche ich einen strategischen Mentor, der an die Zukunft des intelligenten Coachings glaubt und mit seiner Erfahrung zum Erfolg dieses vielversprechenden Projekts beitragen möchte. Als strategischer Partner erhältst du nicht nur Einblick in unsere Entwicklung durch monatliche Updates, sondern wirst aktiv durch die Integration in unseren Slack-Development-Chat und die Teilnahme an ausgewählten Team-Calls in den Fortschritt eingebunden.</p>
+                    <p style="font-size: 1.1rem; color: #ddd; margin-bottom: 20px;">Mehr als nur Kapital suche ich einen strategischen Visionär, der an die Zukunft des intelligenten Coachings glaubt und mit seiner Erfahrung zum Erfolg dieses vielversprechenden Projekts beitragen möchte. Als strategischer Partner erhältst du nicht nur Einblick in unsere Entwicklung durch monatliche Updates, sondern wirst aktiv durch die Integration in unseren Slack-Development-Chat und die Teilnahme an ausgewählten Team-Calls in den Fortschritt eingebunden.</p>
                 </div>
 
                 <p class="quote-closing">
