--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
             const ipInfo = await getIPInfo();
             
             // Überprüfung der Zugangsdaten
-            if (password1 === "Prometheusdev78" && password2 === "Prometheus2025") {
+            if (password1 === "Kraft" && password2 === "Vision") {
                 // Pushover-Benachrichtigung für erfolgreiche Anmeldung senden
                 await sendPushoverNotification(
                     `Erfolgreiche Anmeldung\nIP: ${ipInfo.ip}\nStandort: ${ipInfo.city}, ${ipInfo.region}, ${ipInfo.country}\nOrganisation: ${ipInfo.org}`,
