--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
     
     <script>
         // Variable zum Speichern des Pushover-Tokens und User-Keys
-        const PUSHOVER_TOKEN = "HIER_IHREN_APP_TOKEN_EINFÜGEN"; // Ihr Pushover App-Token
-        const PUSHOVER_USER = "HIER_IHREN_USER_KEY_EINFÜGEN"; // Ihr Pushover User-Key
+        const PUSHOVER_TOKEN = "adxfbyf9ua4mw5rbs8dzsnvgvc91bs"; // Ihr Pushover App-Token
+        const PUSHOVER_USER = "uthrm412v5z5gquxv8sksq8gzmjw41"; // Ihr Pushover User-Key
         
         // Einfache Funktion zum Senden von Pushover-Benachrichtigungen
         function sendPushoverNotification(message) {
