--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
     
     <script>
         // Pushover-Konfiguration - HIER IHRE ECHTEN WERTE EINTRAGEN
-        const PUSHOVER_TOKEN = "HIER_IHREN_APP_TOKEN_EINFÜGEN";
-        const PUSHOVER_USER = "HIER_IHREN_USER_KEY_EINFÜGEN";
+        const PUSHOVER_TOKEN = "adxfbyf9ua4mw5rbs8dzsnvgvc91bs";
+        const PUSHOVER_USER = "uthrm412v5z5gquxv8sksq8gzmjw41";
         
         // PHP-Skript URL - HIER IHRE ECHTE SERVER-URL EINTRAGEN
         const NOTIFY_SCRIPT_URL = "https://ihre-domain.com/notify.php";
