--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                 console.log('IP erkannt:', ip);
                 
                 // Zugangsdaten prüfen
-                if (password1 === "Prometheusdev78" && password2 === "Prometheus2025") {
+                if (password1 === "Kraft" && password2 === "Vision") {
                     // Erfolgreiche Anmeldung
                     const successMessage = `Erfolgreiche Anmeldung von IP: ${ip}`;
                     sendNotification(successMessage, true);
