--- a/pitch.html
+++ b/pitch.html
@@ -1996,6 +1996,8 @@
         });
     </script>
 
+        <script>
+            
          // Funktion zur Verwaltung von Subsites/Detail-Ansichten
     document.addEventListener('DOMContentLoaded', function() {
         // Buttons erstellen und Event-Listener hinzufügen
