--- a/pitch.html
+++ b/pitch.html
@@ -1997,7 +1997,7 @@
     </script>
 
         <script>
-            
+
          // Funktion zur Verwaltung von Subsites/Detail-Ansichten
     document.addEventListener('DOMContentLoaded', function() {
         // Buttons erstellen und Event-Listener hinzufügen
@@ -2032,7 +2032,8 @@
     });
 
     // Funktion zum Einrichten der "Mehr Infos" Buttons
-    function setupSubsiteButtons() {
+    function setupSubsiteButtons()
+    
         // Affiliate-Dashboard Button für die Marketing-Slide
         const marketingSlide = document.getElementById('slide5');
         if (marketingSlide) {
