--- a/pitch.html
+++ b/pitch.html
@@ -681,7 +681,7 @@
 
             <div class="problem-statement">
                 <h3 style="color: #ff6600; margin-bottom: 15px;">DAS PROBLEM</h3>
-                <p style="font-size: 1.2rem; line-height: 1.6;">Krafttraining bleibt auch heute noch ineffizient und ungenau. Trainer können nur wenige Klienten gleichzeitig betreuen, während die meisten Sportler ohne präzise Daten und personalisierte Anleitung trainieren – was zu langsamen Fortschritten, Plateaus und Verletzungen führt.</p>
+                <p style="font-size: 1.2rem; line-height: 1.6;">Kraftsportler aller Disziplinen – von Hyrox und CrossFit bis Powerlifting und Weightlifting – kämpfen heute mit ineffizientem Training. Ohne präzise Messwerte trainieren Athleten im Blindflug, was zu suboptimalen Fortschritten, Plateaus und erhöhtem Verletzungsrisiko führt. Selbst mit persönlichen Trainern fehlt die objektive Beurteilung von Bewegungsqualität und Trainingsintensität, während die meisten Coaches nur wenige Klienten gleichzeitig betreuen können.</p>
             </div>
         </div>
 
@@ -691,7 +691,7 @@
 
     <div class="solution-statement">
         <h3 style="margin-bottom: 15px;">KI-gestützte Präzisions-Coaching-Plattform</h3>
-        <p style="font-size: 1.2rem; line-height: 1.6;">Prometheus verbindet fortschrittliche Technologie und Sportwissenschaft, um jedem Kraftsportler ein personalisiertes, datenbasiertes Training zu ermöglichen.</p>
+        <p style="font-size: 1.2rem; line-height: 1.6;">Prometheus revolutioniert das Training über alle Kraftsportarten hinweg durch die Kombination modernster Technologie mit sportwissenschaftlichen Prinzipien. Unsere Plattform erfasst und analysiert präzise Bewegungen und liefert personalisierte Anpassungen in Echtzeit – wie ein Weltklasse-Coach in der Hosentasche jedes Athleten. Von Hobbysportlern bis zu Wettkampfathleten: Prometheus optimiert das Training durch performancegesteuerte Präzision.</p>
     </div>
 
     <div class="two-columns">
