--- a/pitch.html
+++ b/pitch.html
@@ -1139,40 +1139,47 @@
 </div>
 
         <!-- Slide 4: TECHNOLOGIE -->
-        <div class="slide" id="slide4">
-            <h1 class="slide-title">UNSERE TECHNOLOGIE</h1>
+<div class="slide" id="slide4">
+    <h1 class="slide-title">UNSERE TECHNOLOGIE</h1>
 
-            <div class="stats-grid">
-                <div class="stat-card">
-                    <div class="stat-label">Bar Path-Analyse</div>
-                    <div class="stat-value">KI-Vision</div>
-                    <div class="stat-info">Präzise Bewegungsanalyse ohne zusätzliche Hardware</div>
-                </div>
-                <div class="stat-card">
-                    <div class="stat-label">Velocity Based Training</div>
-                    <div class="stat-value">0.01 m/s</div>
-                    <div class="stat-info">Präzise Messung der Hantelgeschwindigkeit (m/s)</div>
-                </div>
-                <div class="stat-card">
-                    <div class="stat-label">Autoregulation</div>
-                    <div class="stat-value">KI-Adaption</div>
-                    <div class="stat-info">Individuelle Anpassung an tägliche Leistungsfähigkeit</div>
-                </div>
-                <div class="stat-card">
-                    <div class="stat-label">Ernährungs-Korrelation</div>
-                    <div class="stat-value">Datenfusion</div>
-                    <div class="stat-info">Direkte Verbindung zwischen Ernährung und Leistung</div>
-                </div>
-            </div>
-
-            <div class="term-card" style="margin-top: 30px;">
-                <div class="term-icon">🔒</div>
-                <div class="term-content">
-                    <div class="term-value">Proprietäre Algorithmen</div>
-                    <div class="stat-info">Basierend auf sportwissenschaftlichen Prinzipien und maschinellem Lernen mit Millionen von Trainingsdatenpunkten</div>
-                </div>
-            </div>
+    <div class="stats-grid">
+        <div class="stat-card">
+            <div class="stat-label">Bar Path-Analyse</div>
+            <div class="stat-value">KI-Vision</div>
+            <div class="stat-info">Präzise Bewegungsanalyse ohne zusätzliche Hardware</div>
         </div>
+        <div class="stat-card">
+            <div class="stat-label">Velocity Based Training</div>
+            <div class="stat-value">0.01 m/s</div>
+            <div class="stat-info">Präzise Messung der Hantelgeschwindigkeit (m/s)</div>
+        </div>
+        <div class="stat-card">
+            <div class="stat-label">Autoregulation</div>
+            <div class="stat-value">KI-Adaption</div>
+            <div class="stat-info">Individuelle Anpassung an tägliche Leistungsfähigkeit</div>
+        </div>
+        <div class="stat-card">
+            <div class="stat-label">Ernährungs-Korrelation</div>
+            <div class="stat-value">Datenfusion</div>
+            <div class="stat-info">Direkte Verbindung zwischen Ernährung und Leistung</div>
+        </div>
+    </div>
+
+    <div class="term-card" style="margin-top: 30px;">
+        <div class="term-icon">🔒</div>
+        <div class="term-content">
+            <div class="term-value">Proprietäre Algorithmen</div>
+            <div class="stat-info">Basierend auf sportwissenschaftlichen Prinzipien und maschinellem Lernen mit Millionen von Trainingsdatenpunkten</div>
+        </div>
+    </div>
+
+    <!-- "Mehr Infos" Button für Prometheus Features -->
+    <div style="text-align: center; margin-top: 30px;">
+        <button class="more-info-button" onclick="openSubsite('prometheus-features')">
+            <span class="more-info-icon">ℹ️</span> Kernfunktionen im Detail
+        </button>
+    </div>
+</div>
 
 <!-- Slide 5: MARKETING & VERTRIEB (mit Affiliate-Button) -->
 <div class="slide" id="slide5">
@@ -1504,48 +1511,69 @@
         </div>
 
         <!-- Slide 7: TEAM -->
-        <div class="slide" id="slide7">
-            <h1 class="slide-title">UNSER TEAM</h1>
+<div class="slide" id="slide7">
+    <h1 class="slide-title">UNSER TEAM</h1>
 
-            <div class="two-columns">
-                <div class="column">
-                    <div class="term-card">
-                        <div class="term-icon">👨‍💼</div>
-                        <div class="term-content">
-                            <div class="term-value">Gründer & CEO</div>
-                            <div style="color: white; margin: 5px 0;">Daniele Pauli</div>
-                            <div class="stat-info">
-                                • 20+ Jahre Erfahrung als Strength Coach<br>
-                                • Über 14.000 betreute Trainingseinheiten<br>
-                                • Spezialisierung auf Krafttraining und VBT
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="column">
-                    <div class="term-card">
-                        <div class="term-icon">👨‍💻</div>
-                        <div class="term-content">
-                            <div class="term-value">Technisches Team</div>
-                            <div style="color: white; margin: 5px 0;">Archonit Team</div>
-                            <div class="stat-info">
-                                • Computer Vision Spezialisten<br>
-                                • Erfahrene Full-Stack-Entwickler<br>
-                                • Machine Learning Engineers
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="term-card" style="margin-top: 30px;">
-                <div class="term-icon">🔍</div>
+    <div class="two-columns">
+        <div class="column">
+            <div class="term-card">
+                <div class="term-icon">👨‍💼</div>
                 <div class="term-content">
-                    <div class="term-value">Was uns antreibt</div>
-                    <div class="stat-info">Wir sind überzeugt, dass Krafttraining durch präzise Datenanalyse, personalisiertes Coaching und wissenschaftsbasierte Methoden revolutioniert werden kann. Prometheus ist das Ergebnis jahrelanger praktischer Erfahrung und technologischer Innovation.</div>
+                    <div class="term-value">Gründer & CEO</div>
+                    <div style="color: white; margin: 5px 0;">Daniele Pauli</div>
+                    <div class="stat-info">
+                        • 20+ Jahre Erfahrung als Strength Coach<br>
+                        • Über 14.000 betreute Trainingseinheiten<br>
+                        • Spezialisierung auf Krafttraining und VBT
+                    </div>
                 </div>
             </div>
         </div>
+        <div class="column">
+            <div class="term-card">
+                <div class="term-icon">👨‍💻</div>
+                <div class="term-content">
+                    <div class="term-value">Technisches Team</div>
+                    <div style="color: white; margin: 5px 0;">Archonit Team</div>
+                    <div class="stat-info">
+                        • Computer Vision Spezialisten<br>
+                        • Erfahrene Full-Stack-Entwickler<br>
+                        • Machine Learning Engineers
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="term-card" style="margin-top: 30px;">
+        <div class="term-icon">🔍</div>
+        <div class="term-content">
+            <div class="term-value">Was uns antreibt</div>
+            <div class="stat-info">Wir sind überzeugt, dass Krafttraining durch präzise Datenanalyse, personalisiertes Coaching und wissenschaftsbasierte Methoden revolutioniert werden kann. Prometheus ist das Ergebnis jahrelanger praktischer Erfahrung und technologischer Innovation.</div>
+        </div>
+    </div>
+
+    <!-- "Mehr Infos" Button für Team-Details -->
+    <div style="text-align: center; margin-top: 30px;">
+        <button class="more-info-button" onclick="openSubsite('team-details')">
+            <span class="more-info-icon">ℹ️</span> Detaillierte Team-Informationen
+        </button>
+    </div>
+</div>
+
+<!-- Dieser Code muss am Ende deiner Hauptdatei vor dem schließenden </body> Tag eingefügt werden -->
+<!-- Modal für Team-Details -->
+<div id="modal-team-details" class="subsite-modal">
+    <div class="subsite-content">
+        <div class="subsite-header">
+            <div class="subsite-title">Prometheus Team</div>
+            <button class="close-subsite">✕</button>
+        </div>
+        <div class="subsite-body">
+            <iframe class="subsite-iframe" src="team-details.html"></iframe>
+        </div>
+    </div>
+</div>
 
         <!-- Slide 8: PROJEKTIONEN & MEILENSTEINE -->
        <!-- Aktualisierter Abschnitt für Slide 8: PROJEKTIONEN & MEILENSTEINE -->
@@ -2185,6 +2213,32 @@ function openSubsite(subsiteId) {
         </div>
         <div class="subsite-body">
             <iframe class="subsite-iframe" src="tech-architecture.html"></iframe>
+        </div>
+    </div>
+</div>
+
+<!-- 4. Prometheus Features Modal -->
+<div id="modal-prometheus-features" class="subsite-modal">
+    <div class="subsite-content">
+        <div class="subsite-header">
+            <div class="subsite-title">Prometheus Kernfunktionen</div>
+            <button class="close-subsite">✕</button>
+        </div>
+        <div class="subsite-body">
+            <iframe class="subsite-iframe" src="prometheus-features.html"></iframe>
+        </div>
+    </div>
+</div>
+
+<!-- 5. Team Details Modal -->
+<div id="modal-team-details" class="subsite-modal">
+    <div class="subsite-content">
+        <div class="subsite-header">
+            <div class="subsite-title">Prometheus Team</div>
+            <button class="close-subsite">✕</button>
+        </div>
+        <div class="subsite-body">
+            <iframe class="subsite-iframe" src="team-details.html"></iframe>
         </div>
     </div>
 </div>
